# nn

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ColVector.cpp  ColVector.hpp  Dataset.hpp  Matrix.cpp  Matrix.hpp  Matrix.tpp  NeuralNetwork.cpp  NeuralNetwork.hpp  README.md  RUN  RowVector.cpp  RowVector.hpp  main.cpp
matrix/: matrix.cpp  matrix.hpp
tests/: load_data.cpp  test_matrix.cpp  test_vectors.cpp
